--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -10,92 +10,98 @@
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="./../../../assets/adminlte/plugins/fontawesome-free/css/all.min.css">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   <!-- overlayScrollbars -->
   <link rel="stylesheet" href="./../../../assets/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="./../../../assets/adminlte/dist/css/adminlte.min.css">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Edu+QLD+Hand:wght@400..700&family=Kapakana:wght@300..400&display=swap"
-    rel="stylesheet">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed">
   <!-- Site wrapper -->
   <div class="wrapper">
-    <!-- Navbar -->
+    <!-- Navbar con Estilo Pacientes -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-        </li>
-        <!--  <li class="nav-item d-none d-sm-inline-block">
-          <a href="#" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item d-none d-sm-inline-block">
-          <a href="#" class="nav-link">Contact</a>
-        </li>-->
-      </ul>
-
-      <!-- Right navbar links -->
-      <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
-
-        <!-- 💱 Bloque de tasas en columna -->
-        <div class="navbar-info-block d-flex flex-column">
-          <span>💵 <strong>USD:</strong> {{ tasaDolar | number:'1.2-2' }} Bs</span>
-          <span>💶 <strong>EUR:</strong> {{ tasaEuro | number:'1.2-2' }} Bs</span>
-        </div>
-
-        <!-- 🔍 Bloque derecho: buscador -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-            <i class="fas fa-search"></i>
+          <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+            <i class="fas fa-bars"></i>
           </a>
-          <div class="navbar-search-block">
-            <form class="form-inline">
-              <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Buscar" aria-label="Buscar">
-                <div class="input-group-append">
-                  <button class="btn btn-navbar" type="submit">
-                    <i class="fas fa-search"></i>
-                  </button>
-                  <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                    <i class="fas fa-times"></i>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </li>-->
+        </li>
       </ul>
-    </nav>
-    <!-- /.navbar -->
 
-    <!-- Main Sidebar Container -->
-    <aside class="main-sidebar main-sidebar-custom sidebar-dark-primary elevation-4">
-      <!-- 📍 Sede activa -->
-      <div class="navbar-sede align-items-center">
-        📍 Sede <strong>{{ sedeActual | titlecase }}</strong>
+      <!-- Centro: Tasas de cambio -->
+      <div class="navbar-tasas mx-auto">
+        <div class="tasas-container">
+          <span class="tasa-item">
+            <i class="bi bi-currency-dollar"></i>
+            <strong>USD:</strong> {{ tasaDolar | number:'1.2-2' }} Bs
+          </span>
+          <span class="tasa-divider">|</span>
+          <span class="tasa-item">
+            <i class="bi bi-currency-euro"></i>
+            <strong>EUR:</strong> {{ tasaEuro | number:'1.2-2' }} Bs
+          </span>
+        </div>
       </div>
 
-      <!-- Sidebar -->
-      <div class="sidebar" style="margin-top: 0px !important;">
-        <!-- Sidebar user panel -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-          <div class="image">
-            <img [src]="profileImage" class="profile-img" alt="User Image" (error)="handleImageError($event)">
-          </div>
-          <div class="info">
-            <div class="user-name">{{ userName }}</div>
-            <div class="user-role">({{ userRoleName }})</div>
+      <!-- Right navbar links con Dropdown de Usuario -->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown user-menu">
+          <a class="nav-link dropdown-toggle user-dropdown-toggle" href="#" role="button" id="userDropdown"
+            data-bs-toggle="dropdown" aria-expanded="false" (click)="toggleUserDropdown($event)">
+            <div class="user-info-header">
+              <img [src]="profileImage" class="user-img-header" alt="User Image" (error)="handleImageError($event)">
+              <span class="user-name-header">{{ userName }}</span>
+              <i class="bi bi-chevron-down dropdown-arrow"></i>
+            </div>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end user-dropdown-menu" aria-labelledby="userDropdown">
+            <li>
+              <a class="dropdown-item"  (click)="goToMyProfile()">
+                <i class="bi bi-person me-2"></i>Mi Perfil
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item"  (click)="goToExchangeRate()">
+                <i class="bi bi-currency-exchange me-2"></i>Tipo de cambio
+              </a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item logout-option" href="#" (click)="openLogoutModal($event)">
+                <i class="bi bi-box-arrow-right me-2"></i>Cerrar Sesión
+              </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- Sidebar con Estilo Pacientes -->
+    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+      <!-- User Panel -->
+      <div class="sidebar-user">
+        <div class="user-avatar">
+          <img [src]="profileImage" class="avatar-image" alt="User Image" (error)="handleImageError($event)">
+        </div>
+        <div class="user-info">
+          <div class="user-name">{{ userName }}</div>
+          <div class="user-role">{{ userRoleName }}</div>
+          <div class="user-sede">
+            <i class="bi bi-geo-alt"></i>
+            {{ sedeActual | titlecase }}
           </div>
         </div>
+      </div>
 
-        <!-- Sidebar Menu -->
-        <nav class="mt-2">
+      <!-- Sidebar Menu -->
+      <div class="sidebar" style="margin-top: 1rem !important;">
+        <nav class="mt-0">
           <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false">
             <li *ngFor="let menu of filteredMenu" class="nav-item" [ngClass]="{
               'menu-open': selectedMenuLabel === menu.label,
@@ -110,127 +116,115 @@
                   'disabled': menu.underConstruction
                 }">
                 <i *ngIf="menu.icon" [class]="menu.icon"></i>
-                <p [ngStyle]="{'margin-left': getMarginForModule(menu.label)}">
+                <p>
                   {{ menu.label }}
-                  <span *ngIf="menu.underConstruction" class="right badge badge-warning">🚧</span>
+                  <span *ngIf="menu.underConstruction" class="menu-badge">🚧</span>
                 </p>
               </a>
-
 
               <!-- Menú con submenú activo -->
               <a *ngIf="menu.submenu && !menu.underConstruction" class="nav-link"
                 [ngClass]="{ 'active': selectedMenuLabel === menu.label }" role="button" tabindex="0"
                 (click)="toggleSubmenu($event)">
                 <i [class]="menu.icon"></i>
-                <p [ngStyle]="{'margin-left': getMarginForModule(menu.label)}">
+                <p>
                   {{ menu.label }}
-                  <i class="right fas fa-angle-left" [ngClass]="{
-               'fa-rotate-custom': selectedMenuLabel !== menu.label,
-               'fa-rotate-custom-open': selectedMenuLabel === menu.label
-             }"></i>
+                  <i class="right fas fa-angle-left arrow-icon"></i>
                 </p>
               </a>
 
               <!-- Menú con submenú en desarrollo -->
-              <span *ngIf="menu.submenu && menu.underConstruction" class="nav-link"
+              <span *ngIf="menu.submenu && menu.underConstruction" class="nav-link disabled"
                 [matTooltip]="'Módulo en desarrollo 🚧'" matTooltipPosition="right">
                 <i [class]="menu.icon"></i>
-                <p [ngStyle]="{'margin-left': getMarginForModule(menu.label)}">
+                <p>
                   {{ menu.label }}
-                  <span class="right badge badge-warning">🚧</span>
+                  <span class="menu-badge">🚧</span>
                 </p>
               </span>
 
-              <!-- Submenús (solo si no está en desarrollo) -->
-              <ul *ngIf="menu.submenu && !menu.underConstruction" class="nav nav-treeview"
-                [ngClass]="{ 'menu-open': selectedMenuLabel === menu.label }"
-                [style.display]="selectedMenuLabel === menu.label ? 'block' : 'none'">
+              <!-- Submenús -->
+              <ul *ngIf="menu.submenu && !menu.underConstruction" class="nav nav-treeview submenu"
+                [ngClass]="{ 'show': selectedMenuLabel === menu.label }">
                 <li *ngFor="let sub of menu.submenu" class="nav-item">
                   <a [routerLink]="sub.underConstruction ? null : sub.routerLink" class="nav-link"
                     [matTooltip]="sub.underConstruction ? 'Módulo en desarrollo 🚧' : null" matTooltipPosition="right"
                     [matTooltipDisabled]="!sub.underConstruction"
                     (click)="onMenuClick($event, buildSubmenuItem(sub, menu.label))"
                     [ngClass]="{ 'active': selectedSubmenuLabel === sub.label }">
-                    <i class="far fa-circle nav-icon"></i>
+                    <i class="bi bi-dot nav-icon"></i>
                     <p>{{ sub.label }}</p>
                   </a>
                 </li>
               </ul>
-
             </li>
           </ul>
         </nav>
-
       </div>
-
-      <div class="sidebar-custom">
-        <a data-bs-toggle="modal" data-bs-target="#logoutModal" class="btn btn-secondary hide-on-collapse pos-right"
-          style="background-color: var(--details-color); color: black; font-weight: lighter;">Cerrar sesión</a>
-      </div>
-
     </aside>
 
     <!-- Content Wrapper -->
     <section class="content-wrapper">
       <div class="container-fluid">
         <ng-container *ngIf="loader.loading$ | async">
-  <app-global-loader></app-global-loader>
-</ng-container>
-
+          <app-global-loader></app-global-loader>
+        </ng-container>
         <router-outlet></router-outlet>
-
       </div>
     </section>
-    <!-- /.content -->
 
-    <footer class="main-footer mt-5">
-      <div class="float-right d-none d-sm-block">
-        <b>Versión</b> 1.0
+    <!-- Footer con Estilo Pacientes -->
+    <footer class="main-footer" style="background-color:  #34495e !important;">
+      <div class="footer-content">
+        <span class="copyright">&copy; 2025 Óptica New Vision Lens 2020</span>
+        <span class="version">v1.0</span>
       </div>
-      <strong>Copyright &copy; 2025 | New Vision Lens- Óptica.</strong> All rights reserved.
     </footer>
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark"></aside>
-    <!-- /.control-sidebar -->
   </div>
-  <!-- ./wrapper -->
 
-  <!-- Scripts -->
-  <script src="./../../../assets/adminlte/plugins/jquery/jquery.min.js"></script>
-  <script src="./../../../assets/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./../../../assets/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-  <script src="./../../../assets/adminlte/dist/js/adminlte.min.js"></script>
-
-
-  <!-- Modal para Cierre de Sesión -->
+  <!-- Modal para Cierre de Sesión con Estilo Pacientes -->
   <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered"> <!-- Clase para centrar el modal verticalmente -->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="logoutModalLabel">
-            Cierre de Sesión</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content logout-modal">
+        <div class="modal-header-moderno">
+          <div class="modal-header-content">
+            <div class="modal-icon">
+              <i class="bi bi-box-arrow-right"></i>
+            </div>
+            <div class="modal-title-content">
+              <h5 class="modal-title">Cerrar Sesión</h5>
+              <p class="modal-subtitle">Confirmar salida del sistema</p>
+            </div>
+          </div>
+          <button type="button" class="btn-close-moderno" data-bs-dismiss="modal" aria-label="Close">
+            <i class="bi bi-x"></i>
+          </button>
         </div>
-        <div class="modal-body text-center"> <!-- Centrado horizontalmente -->
-          <p style="font-size: 20px; margin: 0; line-height: 1.5;">
-            ¿Estás seguro de que deseas cerrar la sesión?
-          </p>
+        <div class="modal-body-moderno">
+          <div class="form-moderno text-center py-4">
+            <i class="bi bi-question-circle text-warning mb-3" style="font-size: 3rem;"></i>
+            <p class="mb-0" style="color: #495057; font-size: 1.1rem;">
+              ¿Estás seguro de que deseas salir del sistema?
+            </p>
+          </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-success" (click)="confirmLogout()" data-bs-dismiss="modal">
-            <i class="fas fa-sign-out-alt me-2"></i> Cerrar Sesión
+        <div class="modal-footer-moderno">
+          <button type="button" class="btn-secondary-moderno" data-bs-dismiss="modal">
+            <i class="bi bi-x-circle me-2"></i>Cancelar
+          </button>
+          <button type="button" class="btn-primary-moderno" (click)="confirmLogout()" data-bs-dismiss="modal">
+            <i class="bi bi-box-arrow-right me-2"></i>Salir
           </button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap Select plugin -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/css/bootstrap-select.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
-
+  <!-- Scripts -->
+  <script src="./../../../assets/adminlte/plugins/jquery/jquery.min.js"></script>
+  <script src="./../../../assets/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./../../../assets/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+  <script src="./../../../assets/adminlte/dist/js/adminlte.min.js"></script>
 </body>
 
 </html>
